@@ -7,6 +7,7 @@
   <body>
   <h2>TinyMCE Shadow DOM Open Demo Page</h2>
     <div id="shadow-host"></div>
+    <input placeholder="Alternative">
     <script src="../../../../js/tinymce/tinymce.js"></script>
     <script src="../../../../scratch/demos/core/demo.js"></script>
     <script>demos.ShadowDomDemo({ mode: 'open' });</script>
